--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/car1.JPG">
-            <img class="img-fluid" src="img/portfolio/thumbnails/car1.JPG" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/car1.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/car1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -140,8 +140,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/car2.JPG">
-            <img class="img-fluid" src="img/portfolio/thumbnails/car2.JPG" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/car2.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/car2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -153,8 +153,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/car3.JPG">
-            <img class="img-fluid" src="img/portfolio/thumbnails/car3.JPG" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/car3.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/car3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -166,8 +166,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/car5.JPG">
-              <img class="img-fluid" src="img/portfolio/thumbnails/car5.JPG" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/car5.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/car5.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">
                   Category
@@ -179,8 +179,8 @@
             </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/car4.JPG">
-            <img class="img-fluid" src="img/portfolio/thumbnails/car4.JPG" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/car4.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/car4.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -192,8 +192,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/car6.JPG">
-            <img class="img-fluid" src="img/portfolio/thumbnails/car6.JPG" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/car6.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/car6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
                 Category
