--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/car1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Cars
               </div>
               <div class="project-name">
-                Project Name
+                Car wash
               </div>
             </div>
           </a>
@@ -144,10 +144,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/car2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Cars
               </div>
               <div class="project-name">
-                Project Name
+                Car wash
               </div>
             </div>
           </a>
@@ -157,10 +157,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/car3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Cars
               </div>
               <div class="project-name">
-                Project Name
+                Car wash
               </div>
             </div>
           </a>
@@ -173,7 +173,7 @@
                   Category
                 </div>
                 <div class="project-name">
-                  Project Name
+                  Car wash
                 </div>
               </div>
             </a>
@@ -183,10 +183,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/car4.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Cars
               </div>
               <div class="project-name">
-                Project Name
+                Car wash
               </div>
             </div>
           </a>
@@ -196,10 +196,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/car6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
-                Category
+                Cars
               </div>
               <div class="project-name">
-                Project Name
+                Car wash
               </div>
             </div>
           </a>
