--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <img class="img-fluid" src="img/portfolio/thumbnails/car5.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">
-                  Category
+                  Cars
                 </div>
                 <div class="project-name">
                   Car wash
