--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-car text-primary mb-4"></i>
             <h3 class="h4 mb-2">Car Wash</h3>
-            <p class="text-muted mb-0">We hand wash your vihecle from top to bottom, in and out!</p>
+            <p class="text-muted mb-0">We hand wash your vehicle from top to bottom, in and out!</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
